--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,2 +1,3 @@
 
-logging.level.ru.yandex.practicum.filmorate=debug
+logging.level.ru.yandex.practicum.filmorate = debug
+logging.level.org.zalando.logbook = trace
