--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,3 +1,18 @@
 
+# log
 logging.level.ru.yandex.practicum.filmorate = debug
 logging.level.org.zalando.logbook = trace
+# log JDBC
+logging.level.org.springframework.jdbc.core.JdbcTemplate=DEBUG
+logging.level.org.springframework.jdbc.core.StatementCreatorUtils=TRACE
+# db
+spring.sql.init.schema-locations=classpath:db/schema-h2.sql
+spring.sql.init.data-locations=classpath:db/data-h2.sql
+spring.sql.init.mode=always
+spring.datasource.url=jdbc:h2:file:./db/filmorate
+spring.datasource.driverClassName=org.h2.Driver
+spring.datasource.username=sa
+spring.datasource.password=password
+# h2 console
+spring.h2.console.enabled=false
+spring.h2.console.path=/h2-console
