fix. Corrections after review

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,4 +1,3 @@
-
 # log
 logging.level.ru.yandex.practicum.filmorate = debug
 logging.level.org.zalando.logbook = trace
@@ -9,7 +8,7 @@ logging.level.org.springframework.jdbc.core.StatementCreatorUtils=TRACE
 spring.sql.init.schema-locations=classpath:db/schema-h2.sql
 spring.sql.init.data-locations=classpath:db/data-h2.sql
 spring.sql.init.mode=always
-spring.datasource.url=jdbc:h2:file:./db/filmorate
+spring.datasource.url=jdbc:h2:file:./db/filmorate;DB_CLOSE_ON_EXIT=TRUE;AUTO_SERVER=TRUE
 spring.datasource.driverClassName=org.h2.Driver
 spring.datasource.username=sa
 spring.datasource.password=password
